--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <section id="about" class="section">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-            <p>A passionate Computer Science Engineering student with a keen interest in blockchain technology and software development. Currently exploring the world of Ethereum and smart contracts while building practical applications.</p>
+            <p>I’m a passionate software developer with a strong foundation in mobile app development, backend systems, and emerging technologies. Over the past few years, I have built end-to-end solutions across Android and desktop platforms, combining intuitive UI/UX design with robust backend engineering.
+
+                Currently, I'm building a Secure Messaging App using Java, Android Studio, sockets, and SQL, while deepening my expertise in blockchain and Solidity to implement decentralized, secure communication protocols.
+                In addition, I’ve collaborated with business researchers to deliver an HR app MVP, focusing on user-centric design and rapid prototyping. My earlier work includes a Product Management Application built with Python (PyQt5, OpenCV), where I integrated real-time barcode scanning and optimized system performance with multithreading.
+                
+                I’m driven by curiosity, continuous learning, and the desire to create impactful, scalable applications that bridge real-world needs with innovative technology solutions.</p>
         </div>
     </section>
 
