--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     <section id="resume" class="section">
         <h2 class="section-title">Resume</h2>
         <div class="resume-container" style="text-align:center;">
-            <img src="images/resume.jpg" alt="Vishnu P Resume" style="max-width:100%;height:auto;border:1px solid #ccc;box-shadow:0 2px 8px rgba(0,0,0,0.1);margin-bottom:16px;">
+            <img src="Resume.jpg" alt="Vishnu P Resume" style="max-width:100%;height:auto;border:1px solid #ccc;box-shadow:0 2px 8px rgba(0,0,0,0.1);margin-bottom:16px;">
             <br>
-            <a href="images/resume.jpg" download class="download-btn" style="display:inline-block;padding:10px 24px;background:#007bff;color:#fff;border-radius:5px;text-decoration:none;font-weight:500;">Download Resume</a>
+            <a href="Resume.jpg" download class="download-btn" style="display:inline-block;padding:10px 24px;background:#007bff;color:#fff;border-radius:5px;text-decoration:none;font-weight:500;">Download Resume</a>
         </div>
     </section>
 
